/* -------------------------------------------------------------------------- *\
 *        Apache 2.0 License Copyright © 2022-2023 The Aurae Authors          *
 *                                                                            *
 *                +--------------------------------------------+              *
 *                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |              *
 *                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |              *
 *                |  ███████║██║   ██║██████╔╝███████║█████╗   |              *
 *                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |              *
 *                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |              *
 *                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |              *
 *                +--------------------------------------------+              *
 *                                                                            *
 *                         Distributed Systems Runtime                        *
 *                                                                            *
 * -------------------------------------------------------------------------- *
 *                                                                            *
 *   Licensed under the Apache License, Version 2.0 (the "License");          *
 *   you may not use this file except in compliance with the License.         *
 *   You may obtain a copy of the License at                                  *
 *                                                                            *
 *       http://www.apache.org/licenses/LICENSE-2.0                           *
 *                                                                            *
 *   Unless required by applicable law or agreed to in writing, software      *
 *   distributed under the License is distributed on an "AS IS" BASIS,        *
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *
 *   See the License for the specific language governing permissions and      *
 *   limitations under the License.                                           *
 *                                                                            *
\* -------------------------------------------------------------------------- */

syntax = "proto3";

package aurae.cells.v0;

option go_package = "github.com/aurae-runtime/ae/client/pkg/api/v0/cells;cellsv0";

/// Cells
/// ===
///
/// The Cells API is a resource-oriented set of services.
/// Resource type API modelled after the "Resource-oriented design" shared by
/// Source: https://google.aip.dev/121
///
/// API Verbs
/// ===
///
/// We call out a set of common verbs to the cells subsystem.
/// These verbs should be generic enough to use for each resource
/// added to the RPCs and services.
///
/// If functionality can not be implemented by one of these
/// verbs a new verb may be introduced as long as it reasonably
/// applicable to similar RPCs and services.
///
/// * Allocate   Reserve resources, and manage any prerequisites but do not
/// start
/// * Free       Free resources, and destroy any prerequisites that have been
/// started
/// * Start      Run a resource immediately
/// * Stop       Stop a resource immediately
/// * Spawn      A special function that creates a child instance with inherited
/// properties of the parent

/// Cells is the most fundamental isolation boundary for Aurae.
/// A cell is an isolate set of resources of the system which can be
/// used to run workloads.
///
/// A cell is composed of a unique cgroup namespace, and unshared kernel
/// namespaces.
service CellService {
  /// Reserve requested system resources for a new cell.
  /// For cells specifically this will allocate and reserve cgroup resources
  /// only.
  rpc Allocate(CellServiceAllocateRequest) returns (CellServiceAllocateResponse) {}

  /// Free up previously requested resources for an existing cell
  rpc Free(CellServiceFreeRequest) returns (CellServiceFreeResponse) {}

  /// Start a new Executable inside of an existing cell. Can be called
  /// in serial to start more than one executable in the same cell.
  rpc Start(CellServiceStartRequest) returns (CellServiceStartResponse) {}

  /// Stop one or more Executables inside of an existing cell.
  /// Can be called in serial to stop/retry more than one executable.
  rpc Stop(CellServiceStopRequest) returns (CellServiceStopResponse) {}

  rpc List(CellServiceListRequest) returns (CellServiceListResponse) {}
}

/// An Aurae cell is a name given to Linux control groups (cgroups) that also include
/// a name, and special pre-exec functionality that is executed from within the same context
/// as any executables scheduled.
///
/// A cell must be allocated for every executable scheduled. A cell defines the resource
/// constraints of the system to allocate for an arbitrary use case.
message CellServiceAllocateRequest {
  /// A smaller resource constrained section of the system.
  Cell cell = 1;
}

/// The response after a cell has been allocated.
message CellServiceAllocateResponse {
  string cell_name = 1;

  /// A bool that will be set to true if the cgroup was created with
  /// cgroup v2 controller.
  bool cgroup_v2 = 2;
}

/// Used to remove or free a cell after it has been allocated.
message CellServiceFreeRequest {
  string cell_name = 1;
}

/// Response after removing or freeing a cell.
message CellServiceFreeResponse {}

/// A request for starting an executable inside of a Cell.
///
/// This is the lowest level of raw executive functionality.
/// Here you can define shell commands, and meta information about the command.
/// An executable is started synchronously.
message CellServiceStartRequest {
  optional string cell_name = 1;
  Executable executable = 2;
}

/// The response after starting an executable within a Cell.
message CellServiceStartResponse {
  /// Return a pid as an int32 based on the pid_t type
  /// in various libc libraries.
  int32 pid = 1;

  //int32 gid = 2;     // TODO
  //int32 uid = 3;     // TODO
  //string user = 4;   // TODO
  //string group = 5;  // TODO
}

/// Request to stop an executable at runtime.
message CellServiceStopRequest {
  optional string cell_name = 1;
  string executable_name = 2;
}

message CellServiceStopResponse {}

message CellServiceListRequest {}

message CellServiceListResponse {
  repeated CellGraphNode cells = 1;
}

message CellGraphNode {
  Cell cell = 1;
  repeated CellGraphNode children = 2;
}

/// An isolation resource used to divide a system into smaller resource
/// boundaries.
message Cell {
  /// Resource parameters for control groups (cgroups)
  /// Build on the [cgroups-rs](https://github.com/kata-containers/cgroups-rs)
  /// crate. See
  /// [examples](https://github.com/kata-containers/cgroups-rs/blob/main/tests/builder.rs)
  string name = 1;

  CpuController cpu = 2;
  CpusetController cpuset = 3;

  /// Will isolate the process (and proc filesystem) from the host.
  /// Will unshare the pid, ipc, uts, and mount namespaces.
  /// The cgroup namespace is always unshared with the host.
  ///
  /// Default: false
  bool isolate_process = 10;

  /// Will isolate the network from the host.
  /// Will unshare the net namespaces.
  /// The cgroup namespace is always unshared with the host.
  ///
  /// Default: false
  bool isolate_network = 11;

}

/// The most primitive workload in Aurae, a standard executable process.
message Executable {
  string name = 1;
  string command = 2;
  string description = 4;
}


// cgroup

// Docs: https://docs.kernel.org/admin-guide/cgroup-v2.html#cpu
message CpuController {
  // Weight of how much of the total CPU time should this control
  // group get. Note that this is hierarchical, so this is weighted
  // against the siblings of this control group.
  //
  // * Minimum: 1
  // * Maximum: 10_000
  optional uint64 weight = 1;

  // In one period (1_000_000), how much can the tasks run.
  //
  // * Minimum: 0
  //
  // By default a cgroup has no limit, represented as the literal string "max".
  // Not settings this field retains the default of no limit.
  optional int64 max = 2;
}

// Docs: https://docs.kernel.org/admin-guide/cgroup-v2.html#cpuset
message CpusetController {
  // A comma-separated list of CPU IDs where the task in the control group
  // can run. Dashes between numbers indicate ranges.
  optional string cpus = 1;

  // Same syntax as the cpus field of this structure, but applies to
  // memory nodes instead of processors.
  optional string mems = 2;

  // cpus_partition is not supported
}
